# fkai-eye

./: .gitignore  README.md  app.py  pyproject.toml
src/: __init__.py  fetcher.py  interpolation.py  municipalities.py  prefectures.py
