[project]
name = "fkai-eye"
version = "0.1.0"
description = "Japan Discomfort Index (不快指数) interactive 3D map visualizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydeck>=0.9.2",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "streamlit>=1.58.0",
]
